err/gmailer-report.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gmailer_report'...
Listing './lib/python3.5/site-packages/gmailer_report/html_generator'...
Compiling './lib/python3.5/site-packages/gmailer_report/html_generator/generate_html.py'...
***   File "./lib/python3.5/site-packages/gmailer_report/html_generator/generate_html.py", line 44
    print str('"' + column_to_summarise + '" not found in table headers')
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gmailer_report/html_generator/template'...
Listing './lib/python3.5/site-packages/gmailer_report/html_generator/url_checker'...
Compiling './lib/python3.5/site-packages/gmailer_report/html_generator/url_checker/validator.py'...
***   File "./lib/python3.5/site-packages/gmailer_report/html_generator/url_checker/validator.py", line 25
    print check_url.if_url_convert(test_url)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmailer_report/postman.py'...
***   File "./lib/python3.5/site-packages/gmailer_report/postman.py", line 63
    print 'Report - NO RESULTS found %-20s | From: %-15s  | To : %s' % (datetime.datetime.now().strftime("%Y-%m-%d %H:%M:%S"), from_name, recipients)
                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gmailer_report-0.1a3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
